--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
-    <link rel="stylesheet" href="assets.css.style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Trivia Game</title>
 </head>
 
 <body>
     <div class="container">
         <div id="start"><button type="button" class="btn btn-dark btn-lg">Start Quiz</button></div>
+        <!-- Appears once start button is pressed -->
         <div id="quiz">
-            <div id="question">
-                <p class="choice" id="A"></p>
-                <p class="choice" id="B"></p>
-                <p class="choice" id="C"></p>
-                <p class="choice" id="D"></p>
-            </div>
+            <!-- <div id="question">
+                <ol>
+                    <li class="choiceA" id="A"></li>
+                    <li class="choiceB" id="B"></li>
+                    <li class="choiceC" id="C"></li>
+                    <li class="choiceD" id="D"></li>
+                </ol>
+
+            </div> -->
             <!-- Will appear after answer is selected -->
             <div id="answer"></div>
-            
+
             <div id="timer">
                 <div id="counter"></div>
                 <div id="btimeGauge"></div>
