Uploaded work files

--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@
 
 <body>
     <div class="container">
-        <div class="main">
+        <div class="main justify-content-center">
             <h1>super superhero comics quiz!</h1>
-            <div id="start"><button type="button" class="btn btn-dark btn-lg">Start Quiz</button></div>
+            <div><button type="button" class="btn btn-dark btn-lg" id="start">Start Quiz</button></div>
             <!-- Appears once start button is pressed -->
-            <div id="quiz">
-
-                <div id="answer"></div>
-                <div id="score"></div>
-            </div>
-            
+            <div id="quiz"></div>
         </div>
     </div>
 
-    <script src="assets/javascript/app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.js"
+    integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
